@@ -21,13 +21,14 @@ import org.springframework.web.bind.annotation.*;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 
 @Controller
 public class ProductController {
 
-    private Long defaultCategoryId = 1L;
+    private final Long defaultCategoryId = 1L;
     private final ProductService productService;
     private final ProductSizeService productSizeService;
 
@@ -130,25 +131,10 @@ public class ProductController {
             }
         }
 
-        List<ProductDTO> productsWithSizes = new ArrayList<>();
 
-        for (ProductDTO product : products) {
-            List<SizeDTO> availableSizes = productSizeService.getSizesByProductId(product.getId());
 
-            if (!availableSizes.isEmpty()) {
-                double minPrice = Double.MAX_VALUE;
-                for (SizeDTO size : availableSizes) {
-                    double sizePrice = productService.getProductPriceBySize(product.getId(), size.getId());
-                    if (sizePrice < minPrice) {
-                        minPrice = sizePrice;
-                    }
-                }
-                product.setPrice(minPrice);
-                productsWithSizes.add(product);
-            }
-        }
 
-        model.addAttribute("products", productsWithSizes);
+        model.addAttribute("products", products);
         model.addAttribute("currentPage", page);
         model.addAttribute("categoryId", categoryIdValue);
         model.addAttribute("totalPages", productPage.getTotalPages());
@@ -177,95 +163,91 @@ public class ProductController {
             @RequestParam(value = "starRating", required = false, defaultValue = "0") int starRating,
             @RequestParam(value = "page", required = false, defaultValue = "0") int page,
             Model model) {
-        try {
 
-            String decoded = URLDecoder.decode(name, "UTF-8");
-            ProductDTO product = productService.findByNamePaged(decoded, PageRequest.of(0, 1)).getContent().get(0);
-            List<SizeDTO> availableSizes = productSizeService.getSizesByProductId(product.getId());
+        String decoded = URLDecoder.decode(name, StandardCharsets.UTF_8);
+        ProductDTO product = productService.findByNamePaged(decoded, PageRequest.of(0, 1)).getContent().get(0);
+        List<SizeDTO> availableSizes = productSizeService.getSizesByProductId(product.getId());
 
-            if (!availableSizes.isEmpty()) {
-                SizeDTO firstSize = availableSizes.get(0);
-                double productPriceBySize = productService.getProductPriceBySize(product.getId(), firstSize.getId());
-                product.setSelectedSizeId(firstSize.getId());
-                product.setPrice(productPriceBySize);
-            }
-
-            // Set the price based on the selected size
-            if (sizeId != null) {
-                double productPriceBySize = productService.getProductPriceBySize(product.getId(), sizeId);
-                product.setSelectedSizeId(sizeId);
-                product.setPrice(productPriceBySize);
-            }
-
-            double discountedPrice = productService.getDiscountedPrice(product.getId(), product.getId_category());
-
-            if (discountedPrice < product.getPrice()) {
-                product.setIsDiscounted(true);
-                product.setDiscountedPrice(discountedPrice);
-            } else {
-                product.setIsDiscounted(false);
-            }
-
-            // Get the discount percent
-            CategoryDTO categoryDTO = categoryService.getDiscountByCategoryId(product.getId_category());
-            Double discountPercent = (categoryDTO != null) ? categoryDTO.getPercent_discount() : 0.0;
-            // Get reviews list
-            List<FeedBackDTO> feedbackList;
-
-            if (starRating == 0) {
-                feedbackList = feedbackService.getFeedbacksForProduct(product.getId());
-            } else {
-                feedbackList = feedbackService.getFeedbacksForProductByRating(product.getId(), starRating);
-            }
-
-            for (FeedBackDTO feedback : feedbackList) {
-                Account account = feedBackRepository.findAccountByFeedBackId(feedback.getId());
-                feedback.setAccountDTO(accountMapper.accountToAccountDTO(account));
-            }
-
-            double averageRating = feedbackService.getAverageRating(product.getId());
-
-            // Pagination
-            int pageSize = 5;
-            int totalPages = (int) Math.ceil((double) feedbackList.size() / pageSize);
-
-            if (page < 0) {
-                page = 0;
-            } else if (page >= totalPages) {
-                page = totalPages - 1;
-            }
-
-            int start = page * pageSize;
-            int end = Math.min((start + pageSize), feedbackList.size());
-
-            if (start >= 0 && end <= feedbackList.size()) {
-                List<FeedBackDTO> pagedFeedbackList = feedbackList.subList(start, end);
-                model.addAttribute("feedbackList", pagedFeedbackList);
-            }
-            // Check if user has logged in yet
-            String remoteUser = request.getRemoteUser();
-
-            // Count number of comments
-            Long totalComments = feedbackService.countFeedback(product.getId());
-
-            // Get the min price
-
-
-            model.addAttribute("discountPercent", discountPercent);
-            model.addAttribute("product", product);
-            model.addAttribute("availableSizes", availableSizes);
-            model.addAttribute("name", name);
-            model.addAttribute("averageRating", averageRating);
-            model.addAttribute("currentPage", page);
-            model.addAttribute("totalPages", totalPages);
-            model.addAttribute("remoteUser", remoteUser);
-            model.addAttribute("totalComments", totalComments);
-
-
-            return "user/product/detail";
-        } catch (UnsupportedEncodingException e) {
-            return "error";
+        if (!availableSizes.isEmpty()) {
+            SizeDTO firstSize = availableSizes.get(0);
+            double productPriceBySize = productService.getProductPriceBySize(product.getId(), firstSize.getId());
+            product.setSelectedSizeId(firstSize.getId());
+            product.setPrice(productPriceBySize);
         }
+
+        // Set the price based on the selected size
+        if (sizeId != null) {
+            double productPriceBySize = productService.getProductPriceBySize(product.getId(), sizeId);
+            product.setSelectedSizeId(sizeId);
+            product.setPrice(productPriceBySize);
+        }
+
+        double discountedPrice = productService.getDiscountedPrice(product.getId(), product.getId_category());
+
+        if (discountedPrice < product.getPrice()) {
+            product.setIsDiscounted(true);
+            product.setDiscountedPrice(discountedPrice);
+        } else {
+            product.setIsDiscounted(false);
+        }
+
+        // Get the discount percent
+        CategoryDTO categoryDTO = categoryService.getDiscountByCategoryId(product.getId_category());
+        Double discountPercent = (categoryDTO != null) ? categoryDTO.getPercent_discount() : 0.0;
+        // Get reviews list
+        List<FeedBackDTO> feedbackList;
+
+        if (starRating == 0) {
+            feedbackList = feedbackService.getFeedbacksForProduct(product.getId());
+        } else {
+            feedbackList = feedbackService.getFeedbacksForProductByRating(product.getId(), starRating);
+        }
+
+        for (FeedBackDTO feedback : feedbackList) {
+            Account account = feedBackRepository.findAccountByFeedBackId(feedback.getId());
+            feedback.setAccountDTO(accountMapper.accountToAccountDTO(account));
+        }
+
+        double averageRating = feedbackService.getAverageRating(product.getId());
+
+        // Pagination
+        int pageSize = 5;
+        int totalPages = (int) Math.ceil((double) feedbackList.size() / pageSize);
+
+        if (page < 0) {
+            page = 0;
+        } else if (page >= totalPages) {
+            page = totalPages - 1;
+        }
+
+        int start = page * pageSize;
+        int end = Math.min((start + pageSize), feedbackList.size());
+
+        if (start >= 0 && end <= feedbackList.size()) {
+            List<FeedBackDTO> pagedFeedbackList = feedbackList.subList(start, end);
+            model.addAttribute("feedbackList", pagedFeedbackList);
+        }
+        // Check if user has logged in yet
+        String remoteUser = request.getRemoteUser();
+
+        // Count number of comments
+        Long totalComments = feedbackService.countFeedback(product.getId());
+
+        // Get the min price
+
+
+        model.addAttribute("discountPercent", discountPercent);
+        model.addAttribute("product", product);
+        model.addAttribute("availableSizes", availableSizes);
+        model.addAttribute("name", name);
+        model.addAttribute("averageRating", averageRating);
+        model.addAttribute("currentPage", page);
+        model.addAttribute("totalPages", totalPages);
+        model.addAttribute("remoteUser", remoteUser);
+        model.addAttribute("totalComments", totalComments);
+
+
+        return "user/product/detail";
     }
 
     @GetMapping("/getProductPriceBySize")
